--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	<h1 class="text-center">Our Menu</h1>
 
 	<div class="row container container-fluid">
-	<div class="col-lg-4 col-sm-6 col-xs-12" id="chicken-div">
+	<div class="col-md-4 col-sm-6 col-xs-12" id="chicken-div">
 		<section>
 		<div id="chicken">
 			Chicken
@@ -57,7 +57,7 @@
 		</p>
 		</section>
 	</div>
-	<div class="col-lg-4 col-sm-6 col-xs-12" id="beef-div">
+	<div class="col-md-4 col-sm-6 col-xs-12" id="beef-div">
 		<section>
 		<div id="beef">
 			Beef
@@ -67,7 +67,7 @@
 		</p>
 		</section>
 	</div>
-	<div class="col-lg-4 col-sm-12 col-xs-12" id="sushi-div">
+	<div class="col-md-4 col-sm-12 col-xs-12" id="sushi-div">
 		<section>
 		<div id="sushi">
 			Sushi
