--- a/index.html
+++ b/index.html
@@ -17,26 +17,29 @@
             <p class="nav-brand">Food, LLC</p>
           </div>
 
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="true">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-          </button>
+          </button>	
         </div>
         
         <div id="collapsable-nav" class="collapse navbar-collapse">
            <ul id="nav-list" class="nav navbar-nav navbar-right visible-xs">
-            <li class="text-center">
+			<li class="unwind"><a href="#">Toggle navigation</a>   
+            <li class="text-center chicken-item">
               <a href="#chicken-div"><p class="item">Chicken</p></a>
               <hr class="visible-xs">
             </li>            
             <li class="text-center beef-item">
               <a href="#beef-div"><p class="item">Beef</p></a>
               <hr class="visible-xs">
-            </li>
+			</li>
+		    </li>
             <li class="text-center sushi-item">
-              <a href="#sushi-div"><p class="item">Sushi</p></a>
+			  <a href="#sushi-div"><p class="item">Sushi</p></a>
+			  <hr class="visible-xs">
             </li>
           </ul> 
         </div>
