--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="Alphonse" content="Alphonse DATINNON">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width= device-width, initial-scale= 1">
-    <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="stylesheet" href="bootstrapcss">
     <link rel="stylesheet" href="style.css">
     <title>Module 3 solution</title>
 </head>
@@ -18,7 +18,7 @@
           </div>
 
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
+            <span class="sr-only">Menu</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -27,7 +27,8 @@
         
         <div id="collapsable-nav" class="collapse navbar-collapse">
            <ul id="nav-list" class="nav navbar-nav navbar-right visible-xs">
-			<li class="unwind"><a href="#">Toggle navigation</a>   
+			<li class="drop-down">
+				<a href="#">Toggle navigation</a>   
             <li class="text-center chicken-item">
               <a href="#chicken-div"><p class="item">Chicken</p></a>
               <hr class="visible-xs">
@@ -39,7 +40,6 @@
 		    </li>
             <li class="text-center sushi-item">
 			  <a href="#sushi-div"><p class="item">Sushi</p></a>
-			  <hr class="visible-xs">
             </li>
           </ul> 
         </div>
@@ -50,7 +50,7 @@
 	<h1 class="text-center">Our Menu</h1>
 
 	<div class="row container container-fluid">
-	<div class="col-md-12 col-sm-6 col-xs-12" id="chicken-div">
+	<div class="col-md-4 col-sm-6 col-xs-12" id="chicken-div">
 		<section>
 		<div id="chicken">
 			Chicken
@@ -60,7 +60,7 @@
 		</p>
 		</section>
 	</div>
-	<div class="col-md-12 col-sm-6 col-xs-12" id="beef-div">
+	<div class="col-md-4 col-sm-6 col-xs-12" id="beef-div">
 		<section>
 		<div id="beef">
 			Beef
@@ -70,7 +70,7 @@
 		</p>
 		</section>
 	</div>
-	<div class="col-md-12 col-sm-12 col-xs-12" id="sushi-div">
+	<div class="col-md-4 col-sm-12 col-xs-12" id="sushi-div">
 		<section>
 		<div id="sushi">
 			Sushi
